Cambio de portafolio ANALISTA DE DATOS

--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
         <h3>Hola, soy</h3>
         <h1>Daniel Celis</h1>
         <h3>
-          Soy un <span id="element">Desarrollador FrontEnd!</span>
+          Soy un <span id="element">Analista de datos!</span>
         </h3>
         <p>
           ¡Bienvenido a mi portafolio web! Aquí encontrarás una muestra de mi
           trabajo, donde he combinado mi pasión por el diseño y la programación
-          para dar vida a sitios web atractivos y funcionales. Explora mi
-          portfolio y descubre cómo mi experiencia puede aportar valor a tus
-          proyectos.
+          para dar vida a este sitio web. Explora mi portfolio y descubre cómo mi 
+          experiencia puede aportar valor a tus proyectos.
         </p>
 
         <div class="social-media">
@@ -99,15 +98,15 @@
           Sobre <span>Mí</span>
         </h2>
         <p>
-          Soy un ingeniero de sistemas con una pasión por el desarrollo
-          front-end, mi atención se centra en la creación de interfaces de
-          usuario atractivas y altamente funcionales que cautivan a los usuarios
-          y ofrecen experiencias en línea excepcionales.<br /><br />
-          Mi capacidad para traducir conceptos de diseño en sitios web
-          interactivos y receptivos me permite colaborar eficazmente con
-          diseñadores y equipos de desarrollo completos. Siempre estoy buscando
-          retos emocionantes y oportunidades para aprender y crecer en el mundo
-          del desarrollo.
+          En mi camino profesional, he encontrado en la analítica de datos no
+           solo una disciplina apasionante, sino también mi principal área de 
+           expertise. Desde la recolección hasta el análisis e interpretación, 
+           cada paso en el proceso de datos me fascina. 
+            <br /><br />
+          Mi pasión por la analítica 
+          de datos se nutre de la emoción de descifrar patrones ocultos y extraer
+          conocimientos significativos que impulsen la toma de decisiones 
+          informadas. Con una sólida formación técnica y una curiosidad insaciable.
         </p>
 
         <a href="assets\DANIEL_ALEJANDRO_CELIS_CALDERON _CV.pdf"
@@ -125,12 +124,52 @@
 
       <div class="contenedor-skills">
         <ul class="ul-skills">
+
           <li class="item">
             <a href="#skills">
               <div class="div-icon">
                 <img
                   class="icon-img"
-                  src="../assets/HTML-icon.png"
+                  src="/assets/powerBIicon.png"
+                  alt="HTML icon"
+                />
+                <div class="icon-text">POWER BI</div>
+              </div>
+            </a>
+          </li>
+
+          <li class="item">
+            <a href="#skills">
+              <div class="div-icon">
+                <img
+                  class="icon-img"
+                  src="/assets/MySQLicon.png"
+                  alt="ReactJs icon"
+                />
+                <div class="icon-text">MySQL</div>
+              </div>
+            </a>
+          </li>
+
+          <li class="item">
+            <a href="#skills">
+              <div class="div-icon">
+                <img
+                  class="icon-img"
+                  src="/assets/tableauIcon.png"
+                  alt="ReactJs icon"
+                />
+                <div class="icon-text">Tableau</div>
+              </div>
+            </a>
+          </li>
+
+          <li class="item">
+            <a href="#skills">
+              <div class="div-icon">
+                <img
+                  class="icon-img"
+                  src="../assets/HTML-icon.png""
                   alt="HTML icon"
                 />
                 <div class="icon-text">HTML</div>
@@ -169,32 +208,6 @@
               <div class="div-icon">
                 <img
                   class="icon-img"
-                  src="../assets/Sass-icon.png"
-                  alt="JavaScript icon"
-                />
-                <div class="icon-text">Sass</div>
-              </div>
-            </a>
-          </li>
-
-          <li class="item">
-            <a href="#skills">
-              <div class="div-icon">
-                <img
-                  class="icon-img"
-                  src="../assets/Bootstrap-icon.png"
-                  alt="JavaScript icon"
-                />
-                <div class="icon-text">Bootstrap</div>
-              </div>
-            </a>
-          </li>
-
-          <li class="item">
-            <a href="#skills">
-              <div class="div-icon">
-                <img
-                  class="icon-img"
                   src="../assets/Git-icon.png"
                   alt="Git icon"
                 />
@@ -203,18 +216,6 @@
             </a>
           </li>
 
-          <li class="item">
-            <a href="#skills">
-              <div class="div-icon">
-                <img
-                  class="icon-img"
-                  src="../assets/react-icon.png"
-                  alt="ReactJs icon"
-                />
-                <div class="icon-text">ReactJs</div>
-              </div>
-            </a>
-          </li>
         </ul>
       </div>
     </section>
@@ -226,8 +227,7 @@
       </h2>
 
       <div class="proyects-buttons">
-        <a href="#proyects" class="category-item" ategory="all">Todos</a>
-        <a href="#proyects" class="category-item" category="react">React</a>
+        <a href="#proyects" class="category-item" category="all">Todos</a>
         <a href="#proyects" class="category-item" category="html">Html</a>
         <a href="#proyects" class="category-item" category="css">Css</a>
         <a href="#proyects" class="category-item" category="javascript"
@@ -237,15 +237,12 @@
 
       <div class="proyects-container">
         <!-- Primer proyecto -->
-        <div class="proyects-box react html css javascript">
+        <div class="proyects-box all html css javascript">
           <img src="../assets/pro-react-traba.png" alt="Proyecto react" />
           <div class="proyects-layer">
             <h4>Gestión de empleados</h4>
 
             <div class="proyect-icon">
-              <span class="pro-span" id="react-color">
-                <i class="bx bxl-react"></i>React
-              </span>
               <span class="pro-span" id="html-color">
                 <i class="bx bxl-html5"></i>Html
               </span>
@@ -275,7 +272,7 @@
         </div>
 
         <!-- Segundo proyecto -->
-        <div class="proyects-box html css">
+        <div class="proyects-box all html css">
           <img src="../assets/flexbox.png" alt="Proyecto flexbox" />
           <div class="proyects-layer">
             <h4>
