Cambio de imagen de protafolio

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
       </div>
 
       <div class="home-img">
-        <img src="../assets/foto.png" alt="Imagen Home" />
+        <img src="assets/Foto 1.png" alt="Imagen Home" />
       </div>
     </section>
 
     <!--About me section-->
     <section class="about" id="about">
-      <div class="home-img">
-        <img src="../assets/foto.png" alt="Imagen Home" />
+      <div class="about-img">
+        <img src="assets/Foto 1.png" alt="Imagen Home" />
       </div>
 
       <div class="about-content">
