Actualizacion de hoja de vida

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
           informadas. Con una sólida formación técnica y una curiosidad insaciable.
         </p>
 
-        <a href="assets\DANIEL_ALEJANDRO_CELIS_CALDERON _CV.pdf"
-          download="DANIEL_ALEJANDRO_CELIS_CALDERON _CV.pdf"
+        <a href="assets/DANIEL_ALEJANDRO_CELIS_CALDERON_CV.pdf"
+          download="DANIEL_ALEJANDRO_CELIS_CALDERON_CV.pdf"
           class="btn"
           >Descargar CV</a >
       </div>
