integracion de seccion power Bi y proyecto rrhh

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
 
       <div class="proyects-buttons">
         <a href="#proyects" class="category-item" category="all">Todos</a>
+        <a href="#proyects" class="category-item" category="powerbi">Power BI</a>
         <a href="#proyects" class="category-item" category="html">Html</a>
         <a href="#proyects" class="category-item" category="css">Css</a>
         <a href="#proyects" class="category-item" category="javascript"
@@ -236,7 +237,34 @@
       </div>
 
       <div class="proyects-container">
-        <!-- Primer proyecto -->
+
+       <!-- Primer proyecto -->
+       <div class="proyects-box all powerbi ">
+        <img src="assets/RRHH_POWER_BI.png" alt="DashBorad RRHH" />
+        <div class="proyects-layer">
+          <h4>Dashboard RRHH</h4>
+
+          <div class="proyect-icon">
+            <span class="pro-span" id="power-color">
+              <i class='bx bxs-bar-chart-alt-2'></i>Power Bi
+            </span>
+
+          </div>
+          <p>
+            Dashboard de gestión de personal diseñado, para el análisis por 
+            parte del área de recursos humanos, verificando personal activo, 
+            inactivo y filtrado por ubicación  y genero
+          </p>
+          <div class="proyects-links">
+            <a href="https://app.powerbi.com/view?r=eyJrIjoiZTFiOWJjY2MtODUyYS00ZGEyLWI3YTctNTIzMzgxMDEyNGM0IiwidCI6IjA3ZGE2N2EwLTFmNDMtNGU4Yy05NzdmLTVmODhiNjQ3MGVlNiIsImMiOjR9" 
+            target="_blank">
+              <i class="bx bx-link-external"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+
+        <!-- Segundo proyecto -->
         <div class="proyects-box all html css javascript">
           <img src="../assets/pro-react-traba.png" alt="Proyecto react" />
           <div class="proyects-layer">
@@ -271,7 +299,7 @@
           </div>
         </div>
 
-        <!-- Segundo proyecto -->
+        <!-- Tercer proyecto -->
         <div class="proyects-box all html css">
           <img src="../assets/flexbox.png" alt="Proyecto flexbox" />
           <div class="proyects-layer">
