Cambio de contenido sobre mi

--- a/index.html
+++ b/index.html
@@ -53,14 +53,12 @@
       <div class="home-content">
         <h3>Hola, soy</h3>
         <h1>Daniel Celis</h1>
-        <h3>
-          Soy un <span id="element">Analista de datos!</span>
-        </h3>
+        <h3>Soy un <span id="element">Analista de datos!</span></h3>
         <p>
           ¡Bienvenido a mi portafolio web! Aquí encontrarás una muestra de mi
           trabajo, donde he combinado mi pasión por el diseño y la programación
-          para dar vida a este sitio web. Explora mi portfolio y descubre cómo mi 
-          experiencia puede aportar valor a tus proyectos.
+          para dar vida a este sitio web. Explora mi portfolio y descubre cómo
+          mi experiencia puede aportar valor a tus proyectos.
         </p>
 
         <div class="social-media">
@@ -77,9 +75,7 @@
           ></a>
         </div>
 
-        <a href="#contact" class="btn">
-          Contacta conmigo!
-        </a>
+        <a href="#contact" class="btn"> Contacta conmigo! </a>
       </div>
 
       <div class="home-img">
@@ -94,37 +90,45 @@
       </div>
 
       <div class="about-content">
-        <h2 class="heading">
-          Sobre <span>Mí</span>
-        </h2>
+        <h2 class="heading">Sobre <span>Mí</span></h2>
         <p>
-          En mi camino profesional, he encontrado en la analítica de datos no
-           solo una disciplina apasionante, sino también mi principal área de 
-           expertise. Desde la recolección hasta el análisis e interpretación, 
-           cada paso en el proceso de datos me fascina. 
-            <br /><br />
-          Mi pasión por la analítica 
-          de datos se nutre de la emoción de descifrar patrones ocultos y extraer
-          conocimientos significativos que impulsen la toma de decisiones 
-          informadas. Con una sólida formación técnica y una curiosidad insaciable.
+          Ingeniero de sistemas graduado de la Universidad de Cundinamarca con
+          un enfoque en diseño web y experiencia del usuario (UX/UI). Me
+          apasiona crear interfaces intuitivas y atractivas que mejoren la
+          experiencia del usuario.
+          <br /><br />
+          Poseo habilidades en herramientas de diseño como Figma y lenguajes
+          como HTML, css y javaScript, y tengo experiencia en la visualización
+          de datos con Tableau y Power BI, lo que me permite integrar elementos
+          visuales en mis diseños. Destaco en la comunicación de ideas complejas
+          de manera clara y concisa, facilitando la colaboración en equipos
+          multidisciplinares. Busco oportunidades para aplicar mis habilidades
+          técnicas y creativas en el desarrollo de productos digitales que hagan
+          una diferencia significativa en la vida de los usuarios.
+          <br /><br />
+          Destaco en la comunicación de ideas complejas
+          de manera clara y concisa, facilitando la colaboración en equipos
+          multidisciplinares. Busco oportunidades para aplicar mis habilidades
+          técnicas y creativas en el desarrollo de productos digitales que hagan
+          una diferencia significativa en la vida de los usuarios.
+          <br /><br />
         </p>
 
-        <a href="assets/DANIEL_ALEJANDRO_CELIS_CALDERON_CV.pdf"
+        <a
+          href="assets/DANIEL_ALEJANDRO_CELIS_CALDERON_CV.pdf"
           download="DANIEL_ALEJANDRO_CELIS_CALDERON_CV.pdf"
           class="btn"
-          >Descargar CV</a >
+          >Descargar CV</a
+        >
       </div>
     </section>
 
     <!--Skills section-->
     <section class="skills" id="skills">
-      <h1 class="skills-title">
-        Mis<span>Habilidades </span>
-      </h1>
+      <h1 class="skills-title">Mis<span>Habilidades </span></h1>
 
       <div class="contenedor-skills">
         <ul class="ul-skills">
-
           <li class="item">
             <a href="#skills">
               <div class="div-icon">
@@ -167,11 +171,8 @@
           <li class="item">
             <a href="#skills">
               <div class="div-icon">
-                <img
-                  class="icon-img"
-                  src="../assets/HTML-icon.png""
-                  alt="HTML icon"
-                />
+                <img class="icon-img" src="../assets/HTML-icon.png"" alt="HTML
+                icon" />
                 <div class="icon-text">HTML</div>
               </div>
             </a>
@@ -215,20 +216,19 @@
               </div>
             </a>
           </li>
-
         </ul>
       </div>
     </section>
 
     <!--Proyects section-->
     <section class="proyects" id="proyects">
-      <h2 class="heading">
-        Mis <span>proyectos</span>
-      </h2>
+      <h2 class="heading">Mis <span>proyectos</span></h2>
 
       <div class="proyects-buttons">
         <a href="#proyects" class="category-item" category="all">Todos</a>
-        <a href="#proyects" class="category-item" category="powerbi">Power BI</a>
+        <a href="#proyects" class="category-item" category="powerbi"
+          >Power BI</a
+        >
         <a href="#proyects" class="category-item" category="html">Html</a>
         <a href="#proyects" class="category-item" category="css">Css</a>
         <a href="#proyects" class="category-item" category="javascript"
@@ -237,32 +237,32 @@
       </div>
 
       <div class="proyects-container">
+        <!-- Primer proyecto -->
+        <div class="proyects-box all powerbi">
+          <img src="assets/RRHH_POWER_BI.png" alt="DashBorad RRHH" />
+          <div class="proyects-layer">
+            <h4>Dashboard RRHH</h4>
 
-       <!-- Primer proyecto -->
-       <div class="proyects-box all powerbi ">
-        <img src="assets/RRHH_POWER_BI.png" alt="DashBorad RRHH" />
-        <div class="proyects-layer">
-          <h4>Dashboard RRHH</h4>
-
-          <div class="proyect-icon">
-            <span class="pro-span" id="power-color">
-              <i class='bx bxs-bar-chart-alt-2'></i>Power Bi
-            </span>
-
-          </div>
-          <p>
-            Dashboard de gestión de personal diseñado, para el análisis por 
-            parte del área de recursos humanos, verificando personal activo, 
-            inactivo y filtrado por ubicación  y genero
-          </p>
-          <div class="proyects-links">
-            <a href="https://app.powerbi.com/view?r=eyJrIjoiZTFiOWJjY2MtODUyYS00ZGEyLWI3YTctNTIzMzgxMDEyNGM0IiwidCI6IjA3ZGE2N2EwLTFmNDMtNGU4Yy05NzdmLTVmODhiNjQ3MGVlNiIsImMiOjR9" 
-            target="_blank">
-              <i class="bx bx-link-external"></i
-            ></a>
+            <div class="proyect-icon">
+              <span class="pro-span" id="power-color">
+                <i class="bx bxs-bar-chart-alt-2"></i>Power Bi
+              </span>
+            </div>
+            <p>
+              Dashboard de gestión de personal diseñado, para el análisis por
+              parte del área de recursos humanos, verificando personal activo,
+              inactivo y filtrado por ubicación y genero
+            </p>
+            <div class="proyects-links">
+              <a
+                href="https://app.powerbi.com/view?r=eyJrIjoiZTFiOWJjY2MtODUyYS00ZGEyLWI3YTctNTIzMzgxMDEyNGM0IiwidCI6IjA3ZGE2N2EwLTFmNDMtNGU4Yy05NzdmLTVmODhiNjQ3MGVlNiIsImMiOjR9"
+                target="_blank"
+              >
+                <i class="bx bx-link-external"></i
+              ></a>
+            </div>
           </div>
         </div>
-      </div>
 
         <!-- Segundo proyecto -->
         <div class="proyects-box all html css javascript">
@@ -303,9 +303,7 @@
         <div class="proyects-box all html css">
           <img src="../assets/flexbox.png" alt="Proyecto flexbox" />
           <div class="proyects-layer">
-            <h4>
-              Proyecto flexbox
-            </h4>
+            <h4>Proyecto flexbox</h4>
 
             <div class="proyect-icon">
               <span class="pro-span" id="html-color">
@@ -338,9 +336,7 @@
 
     <!--Seccion de contactos-->
     <section class="contact" id="contact">
-      <h2 class="heading">
-        ¡Contácte <span>Conmigo!</span>
-      </h2>
+      <h2 class="heading">¡Contácte <span>Conmigo!</span></h2>
 
       <form action="https://formspree.io/f/xpzggaeo" method="POST">
         <div class="input-box">
@@ -349,18 +345,18 @@
             name="nombre"
             placeholder="Nombre completo"
             autocomplete="off"
-            required />
+            required
+          />
 
           <input
             type="email"
             name="_replyto"
             placeholder="Correo electrónico"
             autocomplete="off"
-            required />
-
+            required
+          />
         </div>
         <div class="input-box">
-
           <input
             type="tel"
             name="telefono"
@@ -369,14 +365,15 @@
             onkeypress="return event.charCode >= 48 && event.charCode <= 57"
             title="Formato esperado: ##########"
             autocomplete="off"
-            required />
+            required
+          />
           <input
             type="text"
             name="asunto"
             placeholder="Asunto del correo"
             autocomplete="off"
-            required/>
-
+            required
+          />
         </div>
 
         <textarea
@@ -385,13 +382,11 @@
           rows="10"
           placeholder="Tu mensaje"
           autocomplete="off"
-          required>
+          required
+        >
         </textarea>
 
-        <input type="submit" 
-        value="Enviar mensaje" 
-        class="btn" />
-
+        <input type="submit" value="Enviar mensaje" class="btn" />
       </form>
     </section>
 
@@ -432,20 +427,20 @@
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous">
-  </script>
+    crossorigin="anonymous"
+  ></script>
   <script src="https://smtpjs.com/v3/smtp.js"></script>
   <script src="javascript/traduction.js"></script>
   <!--Animacion-->
   <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typeit/dist/typeit.min.js"></script>
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        new TypeIt("#element", {
-            strings:"",
-            speed: 120,
-            loop: true,
-        }).go();
+    document.addEventListener("DOMContentLoaded", function () {
+      new TypeIt("#element", {
+        strings: "",
+        speed: 120,
+        loop: true,
+      }).go();
     });
-</script>
-  </html>
+  </script>
+</html>
