Agregado logo figma

--- a/index.html
+++ b/index.html
@@ -220,6 +220,21 @@
       </div>
     </section>
 
+    <div class="contenedor-skills">
+      <ul class="ul-skills">
+        <li class="item">
+          <a href="#skills">
+            <div class="div-icon">
+              <img
+                class="icon-img"
+                src="/assets/figma-logo.png"
+                alt="Figma icon"
+              />
+              <div class="icon-text">Figma</div>
+            </div>
+          </a>
+        </li>
+
     <!--Proyects section-->
     <section class="proyects" id="proyects">
       <h2 class="heading">Mis <span>proyectos</span></h2>
