Regreso a anlista de datos

--- a/index.html
+++ b/index.html
@@ -92,19 +92,20 @@
       <div class="about-content">
         <h2 class="heading">Sobre <span>Mí</span></h2>
         <p>
-          Ingeniero de sistemas graduado de la Universidad de Cundinamarca con
-          un enfoque en diseño web y experiencia del usuario (UX/UI). Me
-          apasiona crear interfaces intuitivas y atractivas que mejoren la
-          experiencia del usuario. Poseo habilidades en herramientas de diseño
-          como Figma y conocimiento en lenguajes como html, css y javaScript,
+          Graduado en Ingeniería de Sistemas, especializado en Análisis de
+          Datos. Poseo habilidades sólidas para transformar datos complejos en
+          información clara y accionable, impulsando la toma de decisiones
+          estratégicas. Mi experiencia abarca desde la recopilación y limpieza
+          de datos hasta el análisis avanzado y la visualización efectiva,
+          utilizando herramientas como Python, SQL, Excel, Tableau y Power BI
+
           <br /><br />
-          Tengo experiencia en la visualización de datos con Tableau y Power BI.
-          lo que me permite integrar elementos visuales en mis diseños. Destaco
-          en la comunicación de ideas complejas de manera clara y concisa,
-          facilitando la colaboración en equipos multidisciplinares. Busco
-          oportunidades para aplicar mis habilidades técnicas y creativas en el
-          desarrollo de productos digitales que hagan una diferencia
-          significativa en la vida de los usuarios.
+          Con un enfoque meticuloso en la identificación de tendencias y
+          patrones, optimizo procesos, mejoro la eficiencia operativa y descubro
+          oportunidades de negocio. Además, mi capacidad para comunicar
+          hallazgos de manera clara y concisa a equipos multidisciplinarios
+          garantiza la comprensión e implementación exitosa de las soluciones
+          propuestas.
         </p>
 
         <a
