agregado nuevo proyecto

--- a/index.html
+++ b/index.html
@@ -92,20 +92,16 @@
       <div class="about-content">
         <h2 class="heading">Sobre <span>Mí</span></h2>
         <p>
-          Graduado en Ingeniería de Sistemas, especializado en Análisis de
-          Datos. Poseo habilidades sólidas para transformar datos complejos en
-          información clara y accionable, impulsando la toma de decisiones
-          estratégicas. Mi experiencia abarca desde la recopilación y limpieza
-          de datos hasta el análisis avanzado y la visualización efectiva,
-          utilizando herramientas como Python, SQL, Excel, Tableau y Power BI
+          Soy Ingeniero de Sistemas con experiencia en desarrollo de software y
+          análisis de datos. Manejo herramientas como Python, SQL, Power BI,
+          Tableau y Excel, así como tecnologías web como HTML, CSS y JavaScript.
 
           <br /><br />
-          Con un enfoque meticuloso en la identificación de tendencias y
-          patrones, optimizo procesos, mejoro la eficiencia operativa y descubro
-          oportunidades de negocio. Además, mi capacidad para comunicar
-          hallazgos de manera clara y concisa a equipos multidisciplinarios
-          garantiza la comprensión e implementación exitosa de las soluciones
-          propuestas.
+          Me especializo en transformar datos en información valiosa, optimizar
+          procesos y desarrollar soluciones tecnológicas eficientes. Además,
+          tengo habilidades para comunicar hallazgos de forma clara, facilitando
+          la toma de decisiones estratégicas. Busco oportunidades donde pueda
+          aportar mi experiencia para generar impacto real.
         </p>
 
         <a
@@ -152,19 +148,6 @@
           <li class="item">
             <a href="#skills">
               <div class="div-icon">
-                <img
-                  class="icon-img"
-                  src="/assets/tableauIcon.png"
-                  alt="ReactJs icon"
-                />
-                <div class="icon-text">Tableau</div>
-              </div>
-            </a>
-          </li>
-
-          <li class="item">
-            <a href="#skills">
-              <div class="div-icon">
                 <img class="icon-img" src="../assets/HTML-icon.png"" alt="HTML
                 icon" />
                 <div class="icon-text">HTML</div>
@@ -203,10 +186,10 @@
               <div class="div-icon">
                 <img
                   class="icon-img"
-                  src="../assets/Git-icon.png"
-                  alt="Git icon"
+                  src="../assets/react_logo.png"
+                  alt="React icon"
                 />
-                <div class="icon-text">GitHub</div>
+                <div class="icon-text">React</div>
               </div>
             </a>
           </li>
@@ -216,10 +199,10 @@
               <div class="div-icon">
                 <img
                   class="icon-img"
-                  src="/assets/figma-logo.png"
-                  alt="Figma icon"
+                  src="../assets/Git-icon.png"
+                  alt="Git icon"
                 />
-                <div class="icon-text">Figma</div>
+                <div class="icon-text">GitHub</div>
               </div>
             </a>
           </li>
@@ -233,59 +216,31 @@
 
       <div class="proyects-buttons">
         <a href="#proyects" class="category-item" category="all">Todos</a>
-        <a href="#proyects" class="category-item" category="powerbi"
-          >Power BI</a
-        >
-        <a href="#proyects" class="category-item" category="html">Html</a>
-        <a href="#proyects" class="category-item" category="css">Css</a>
+        <a href="#proyects" class="category-item" category="react">React</a>
+        <a href="#proyects" class="category-item" category="html">Html/Css</a>
         <a href="#proyects" class="category-item" category="javascript"
           >JavaScript</a
+        >
+        <a href="#proyects" class="category-item" category="powerbi"
+          >Power BI</a
         >
       </div>
 
       <div class="proyects-container">
         <!-- Primer proyecto -->
-        <div class="proyects-box all powerbi">
-          <img src="assets/RRHH_POWER_BI.png" alt="DashBorad RRHH" />
-          <div class="proyects-layer">
-            <h4>Dashboard RRHH</h4>
-
-            <div class="proyect-icon">
-              <span class="pro-span" id="power-color">
-                <i class="bx bxs-bar-chart-alt-2"></i>Power Bi
-              </span>
-            </div>
-            <p>
-              Dashboard de gestión de personal diseñado, para el análisis por
-              parte del área de recursos humanos, verificando personal activo,
-              inactivo y filtrado por ubicación y genero
-            </p>
-            <div class="proyects-links">
-              <a
-                href="https://app.powerbi.com/view?r=eyJrIjoiZTFiOWJjY2MtODUyYS00ZGEyLWI3YTctNTIzMzgxMDEyNGM0IiwidCI6IjA3ZGE2N2EwLTFmNDMtNGU4Yy05NzdmLTVmODhiNjQ3MGVlNiIsImMiOjR9"
-                target="_blank"
-              >
-                <i class="bx bx-link-external"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Segundo proyecto -->
         <div class="proyects-box all html css javascript">
-          <img src="../assets/pro-react-traba.png" alt="Proyecto react" />
+          <img src="assets\Proyects\pro-react-traba.png" alt="Proyecto react" />
           <div class="proyects-layer">
             <h4>Gestión de empleados</h4>
-
             <div class="proyect-icon">
+              <span class="pro-span" id="react-color">
+                <i class="bx bxl-react"></i>React
+              </span>
               <span class="pro-span" id="html-color">
                 <i class="bx bxl-html5"></i>Html
               </span>
               <span class="pro-span" id="css-color">
                 <i class="bx bxl-css3"></i>Css
-              </span>
-              <span class="pro-span" id="script-color">
-                <i class="bx bxl-javascript"></i>JavaScript
               </span>
             </div>
             <p>
@@ -306,9 +261,41 @@
           </div>
         </div>
 
+        <!-- Segundo proyecto -->
+        <div class="proyects-box all html css">
+          <img src="assets\Proyects\barberia.png" alt="Proyecto react" />
+          <div class="proyects-layer">
+            <h4>Barberia</h4>
+            <div class="proyect-icon">
+              <span class="pro-span" id="html-color">
+                <i class="bx bxl-html5"></i>Html
+              </span>
+              <span class="pro-span" id="css-color">
+                <i class="bx bxl-css3"></i>Css
+              </span>
+            </div>
+            <p>
+              Página web para una barbería utilizando HTML y CSS, con un diseño
+              atractivo y totalmente responsivo. El sitio cuenta con secciones
+              de Inicio, Productos y Contacto, ofreciendo una experiencia fluida
+              en cualquier dispositivo.
+            </p>
+            <div class="proyects-links">
+              <a href="https://barberia-liard.vercel.app/" target="_blank">
+                <i class="bx bx-link-external"></i
+              ></a>
+              <a
+                href="https://github.com/celissss20/Barberia_practica"
+                target="_blank"
+                ><i class="bx bxl-github"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+
         <!-- Tercer proyecto -->
         <div class="proyects-box all html css">
-          <img src="../assets/flexbox.png" alt="Proyecto flexbox" />
+          <img src="assets\Proyects\flexbox.png" alt="Proyecto flexbox" />
           <div class="proyects-layer">
             <h4>Proyecto flexbox</h4>
 
@@ -334,6 +321,33 @@
                 href="https://github.com/celissss20/Curso_FlexBox"
                 target="_blank"
                 ><i class="bx bxl-github"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Cuarto proyecto -->
+        <div class="proyects-box all powerbi">
+          <img src="assets/Proyects/RRHH_POWER_BI.png" alt="DashBorad RRHH" />
+          <div class="proyects-layer">
+            <h4>Dashboard RRHH</h4>
+
+            <div class="proyect-icon">
+              <span class="pro-span" id="power-color">
+                <i class="bx bxs-bar-chart-alt-2"></i>Power Bi
+              </span>
+            </div>
+            <p>
+              Dashboard de gestión de personal diseñado, para el análisis por
+              parte del área de recursos humanos, verificando personal activo,
+              inactivo y filtrado por ubicación y genero
+            </p>
+            <div class="proyects-links">
+              <a
+                href="https://app.powerbi.com/view?r=eyJrIjoiZTFiOWJjY2MtODUyYS00ZGEyLWI3YTctNTIzMzgxMDEyNGM0IiwidCI6IjA3ZGE2N2EwLTFmNDMtNGU4Yy05NzdmLTVmODhiNjQ3MGVlNiIsImMiOjR9"
+                target="_blank"
+              >
+                <i class="bx bx-link-external"></i
               ></a>
             </div>
           </div>
